--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-torch>=1.9.0
+streamlit>=1.28.0
 transformers>=4.21.0
-datasets>=2.0.0
-accelerate>=0.12.0
-scikit-learn>=1.0.0
-numpy>=1.21.0
-pandas>=1.3.0
-matplotlib>=3.4.0
-seaborn>=0.11.0
-flask>=2.0.0
+torch>=1.9.0
+numpy<2.0
