--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,14 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@types/node": "^24.8.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.19",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.10",
-    "daisyui": "^4.12.10",
     "vite": "^5.0.0"
   }
 }
-
-
